--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,12 @@
   <script src="js/lib/angular-route.min.js"></script>
   <script src="js/lib/angular-resource.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/controllers/logout-controller.js"></script>
   <script src="js/controllers/fotos-controller.js"></script>
   <script src="js/controllers/foto-controller.js"></script>
   <script src="js/controllers/grupos-controller.js"></script>
   <script src="js/controllers/login-controller.js"></script>
+  <script src="js/controllers/register-controller.js"></script>
   <script src="js/directives/minhas-diretivas.js"></script>
   <script src="js/services/meus-servicos.js"></script>
   <script src="js/services/token-interceptior.js"></script>
